# fsi-skills

./: .gitignore  README.md  install.sh
fsi-analysis/: SKILL.md
fsi-chart/: SKILL.md
fsi-chart/scripts/: fsi_chart.py
fsi-fetch/: SKILL.md
fsi-fetch/scripts/: fsi_fetch.py
fsi-market/: SKILL.md
fsi-pkg/: pyproject.toml
fsi-pkg/src/fsi/: __init__.py  broadcast.py  config.py  health.py  market_context.py  portfolio.py  proxy.py  sim.py  trading_calendar.py
fsi-pkg/src/fsi/ai/: bedrock.py  prompts.py
fsi-pkg/src/fsi/cli/: am.py  am_post.py  chart.py  check.py  compare.py  digest.py  doc_post.py  doc_video.py  eod.py  fetch.py  finance.py  flow.py  help.py  hot.py  intraday_chart.py  main.py  mid.py  monitor.py  news.py  now.py  now_post.py  pick.py  pm.py  pm_post.py  pm_video.py  pos.py  query.py  quote.py  report.py  screen.py  search.py  sim.py  us.py  wave.py
fsi-pkg/src/fsi/db/: connection.py  schema.py
fsi-pkg/src/fsi/fetcher/: base.py  capital_flow.py  etf.py  global_index.py  index.py  intraday.py  market_news.py  qvix.py  stock.py  yahoo.py
fsi-pkg/src/fsi/indicators/: bias.py  bollinger.py  engine.py  kdj.py  macd.py  moving_average.py  rsi.py  scoring.py  swing.py  volume.py
fsi-pkg/src/fsi/output/: formatter.py
fsi-wave/: SKILL.md
fsi-wave/scripts/: fsi_wave.py
skills/fsi-analysis/: SKILL.md
skills/fsi-analysis/scripts/: fsi_analysis.py
skills/fsi-fetch/: SKILL.md
skills/fsi-market/scripts/: fsi_market.py
skills/fsi-quote/: SKILL.md
skills/fsi-wave/: SKILL.md
