[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fsi"
version = "0.1.0"
description = "A股数据抓取与分析 CLI 工具"
requires-python = ">=3.11"
dependencies = [
    "akshare>=1.14",
    "yfinance>=0.2.36",
    "duckdb>=1.0",
    "pandas>=2.0",
    "pandas-ta>=0.4.67b0",
    "click>=8.0",
    "tenacity>=8.0",
    "tqdm>=4.60",
    "rich>=13.0",
    "boto3>=1.34",
    "pysocks>=1.7",
    "mplfinance>=0.12.7a0",
    "requests>=2.25",
    "matplotlib>=3.5",
    "numpy>=1.23",
]

[project.scripts]
fsi = "fsi.cli.main:cli"

[tool.setuptools.packages.find]
where = ["src"]
